src/objects/PortalMessage__c.object
<CustomObject>
    <description>Used by the ECO_Portal pages to display User Alerts, News Feed Items, and News Ticker.</description>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FullImageUrl__c</fullName>
        <label>Full Image Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsEscalationAlert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Escalation Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LinkToRecord__c</fullName>
        <label>Link to Record</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LongDescriptionMaxLength__c</fullName>
        <label>Long Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PortalMessages</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Portal Message</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>LongDescriptionMaxLength__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Active</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>LongDescriptionMaxLength__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EndDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>StartDate__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>All Active</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PM-{0000000000}</displayFormat>
        <label>Portal Message Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portal Messages</pluralLabel>
    <recordTypes>
        <fullName>Alert</fullName>
        <active>true</active>
        <description>An alert that should be displayed on the EcoSystem portal</description>
        <label>Alert</label>
    </recordTypes>
    <recordTypes>
        <fullName>NewsFeedItem</fullName>
        <active>true</active>
        <description>Used for the news feed items - the ones with pics and links.</description>
        <label>News Feed Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>NewsTicker</fullName>
        <active>true</active>
        <description>Used for the news ticker along the top of the portal.</description>
        <label>News Ticker</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Start_Date_Before_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>EndDate__c &lt;=  StartDate__c</errorConditionFormula>
        <errorDisplayField>StartDate__c</errorDisplayField>
        <errorMessage>Start Date must come before the End Date</errorMessage>
    </validationRules>
</CustomObject>